# service-gator

./: .dockerignore  AGENTS.md  Cargo.toml  Containerfile  DEBUGGING.md  Justfile  README.md  test-config.toml
.github/workflows/: build-container.yml  ci.yaml  ci.yml
docs/: todo.md
docs/todo/: github-native-api.md  openpolicyagent.md
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs  main.rs  mcp_client.rs
integration-tests/src/tests/: forgejo.rs  jira.rs  mcp_server.rs  push_new_branch_tests.rs  rest_api.rs  rmcp_client.rs  status_tests.rs
src/: auth.rs  config_watcher.rs  core.rs  forgejo.rs  forgejo_client.rs  git.rs  github.rs  gitlab.rs  jira.rs  jira_client.rs  jira_types.rs  lib.rs  logging.rs  mcp.rs  net.rs  proxy.rs  scope.rs  secret.rs
src/servers/: mcp.rs  mod.rs  rest.rs  rest_auth.rs
src/servers/middleware/: auth.rs  cors.rs  logging.rs  mod.rs
src/services/: cli.rs  jira.rs  mod.rs
