[workspace]
members = [".", "integration-tests"]

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "forbid"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
eyre = "0.6.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "signal"] }

[package]
name = "service-gator"
version = "0.2.0"
edition = "2021"
description = "Scope-restricted CLI wrapper for sandboxed AI agents"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cgwalters/service-gator"
keywords = ["ai", "security", "sandbox", "mcp", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.75"

[[bin]]
name = "service-gator"
path = "src/bin/service_gator.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.14", features = ["server", "transport-streamable-http-server"] }
tokio = { workspace = true }
tokio-util = "0.7"
axum = "0.8"
http = "1"
# HTTP proxy functionality
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
eyre = { workspace = true }
thiserror = "2"
# Native Forgejo/Gitea API client
forgejo-api = "0.9"
url = "2"
# Native JIRA API client
gouqi = { version = "0.20", features = ["async"] }
# GraphQL query parsing for read-only validation
graphql-parser = "0.4"
# JWT token handling for bearer auth
jsonwebtoken = "9"
# Constant-time comparison for security
subtle = "2"
# Tracing for structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Linux inotify for config file live reload
rustix = { version = "1", features = ["fs"] }
itertools = "0.14"
camino = { version = "1.2.2", features = ["serde1"] }
tempfile = "3.24.0"
# Pin time to avoid 0.3.47 which has compile-time assertions that fail on older Rust
# See: https://github.com/time-rs/time/issues/836
time = ">=0.3,<0.3.47"
urlencoding = "2.1"

[dev-dependencies]
cap-std-ext = "4.0.7"
itertools = "0.14"
kani-verifier = "0.67"

[lints]
workspace = true
