[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Disable automatic binary discovery to avoid conflicts with test target
autobins = false

[[test]]
name = "integration-tests"
path = "src/main.rs"
harness = false

[dependencies]
service-gator = { path = ".." }
eyre = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
libtest-mimic = "0.8"
linkme = "0.3"
paste = "1.0"
tempfile = { workspace = true }
# HTTP client for admin endpoints and raw requests
reqwest = { version = "0.12", features = ["json", "blocking"] }
# MCP client for proper protocol handling
rmcp = { workspace = true, features = ["client", "transport-streamable-http-client-reqwest"] }

[lints]
workspace = true
